<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ccc"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tabela"
        android:layout_margin="20dp"
        android:background="@drawable/border"
        android:shrinkColumns="*"
        android:stretchColumns="*">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:text="@string/txtNumeroNota2" />

    <EditText
        android:id="@+id/textNota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:hint="@string/hintNota">
    </EditText>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/txtNomeCliente" />

    <EditText
        android:id="@+id/textNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:hint="@string/hintCliente">
    </EditText>

        <Button
            android:id="@+id/button6"
            android:layout_width="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_height="wrap_content"
            android:background="@drawable/botao"
            android:onClick="salvarNovaLocacao"
            android:textColor="#FFF"
            android:textSize="17sp"
            android:textStyle="bold"
            android:text="@string/btSalvar" />

    </TableLayout>
</LinearLayout>
